# mini-redis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: config.hpp  main.cpp
src/aof_manager/: aof_manager.cpp  aof_manager.hpp
src/commands/: processor.cpp  processor.hpp
src/server/: server.cpp  server.hpp
src/storage/: storage.cpp  storage.hpp
src/thread_pool/: thread_pool.cpp  thread_pool.hpp
src/utils/: logger.hpp
tests/: test_persistance.py  test_server.py
